# robot_framework_selenium

./: .gitignore  README.md  main.py  pyproject.toml  robot.args
data/: constants.resource  login_data.json
resources/: commons.resource
resources/locators/: login_locators.py
resources/pages/: login_page.resource
tests/: test_login.robot
utilities/: json_utilities.resource
